# evcollect

./: .gitignore  LICENSE  Makefile  Makefile.am  README.md  TODO  autogen.sh  config-syntax.md  configure.ac
plugins/eventql/: Makefile.am  eventql_plugin.cc  eventql_plugin.h
plugins/hostname/: Makefile.am  hostname_plugin.cc
plugins/hostname/util/: stringutil.h
plugins/unix_stats/: Makefile.am  disk_stats.cc  disk_stats.h  kernel_stats.cc  kernel_stats.h  process_stats.cc  process_stats.h  unix_stats_plugin.cc  unix_stats_plugin.md
plugins/unix_stats/util/: stringutil.cc  stringutil_impl.h  time.cc  time.h  time_impl.h
src/evcollect/: .gitignore  Makefile.am  config.cc  config.h  configlexer.cc  configlexer.h  configlexer_test.cc  configparser.cc  configparser.h  configparser_test.cc  dispatch.cc  dispatch.h  evcollect.cc  evcollect.h  evcollectd.cc  evcollectd_test.cc  logfile.cc  logfile.h  plugin.cc  plugin.h  plugin_map.cc  plugin_map.h  service.cc  service.h
src/evcollect/plugins/eventql/: eventql_plugin.cc  eventql_plugin.h
src/evcollect/plugins/hostname/: Makefile.am  hostname_plugin.cc  hostname_plugin.h
src/evcollect/plugins/logfile/: logfile_plugin.cc  logfile_plugin.h
src/evcollect/plugins/unix/: unix_plugin.cc  unix_plugin.h
src/evcollect/plugins/unix_stats/: unix_stats_plugin.cc  unix_stats_plugin.h
src/evcollect/util/: ansicolor.cc  ansicolor.h  base64.cc  base64.h  flagparser.cc  flagparser.h  logging.cc  logging.h  return_code.h  sha1.cc  stringutil.cc  stringutil.h  testing.cc  testing.h  testing_main.cc  time.cc  unix_time.cc  unix_time.h  wallclock.cc  wallclock.h
